--- a/templates/careplan.html
+++ b/templates/careplan.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <button type="button" class="btn btn-success">Success</button>
+    <a href="/success"><button type="button" class="btn btn-success">Success</button></a>
 </main>
 
 <!-- Bootstrap core JavaScript
